# emsdk-cpp-callbacks

./: .gitignore  README.md  build.sh  build_cpp.sh  package.json  tsconfig.json  webpack.config.js
cpp-wasm/: CMakeLists.txt  Dockerfile  build.sh  func-wrapper.js
cpp-wasm/src/: cppwasm.cpp  info_callback_async_proxying.cpp  info_proxy_async.cpp
examples/node/: package.json
examples/node/src/: index.ts
examples/web/: tsconfig.json  webpack.config.js
examples/web/src/: index.html  index.ts
src/: index.ts
